Bug #36442, "Falcon: crash during optimize table"

Refined Table::optimize() to release each base record.
Records having newer record versions were not being released.